# sparc4-pipeline

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  log_sparc4.py  opd_mini_pipeline.py  pipeline_lib.py  pyproject.toml  run_sparc4_products.py  setup.py  sparc4_config.yml  sparc4_db.py  sparc4_lightcurve.py  sparc4_mini_pipeline.py  sparc4_params.py  sparc4_params.yaml  sparc4_pipeline_lib.py  sparc4_product_plots.py  sparc4_products.py  sparc4_utils.py
minidata/: 2022041620502575_C1_ZERO.fits  2022041620502599_C1_ZERO.fits  2022041620502622_C1_ZERO.fits  2022041621380372_C1.fits  2022041621381997_C1.fits  2022041621383622_C1.fits  2022041621385247_C1.fits  2022041701131743_C1_FLAT_CLEAN.fits  2022041701132367_C1_FLAT_CLEAN.fits  2022041701132993_C1_FLAT_CLEAN.fits
notebooks/: sp4_astrometry.ipynb  sp4_bias_flat_calibration.ipynb  sp4_calibrate_zero_from_circular_std.ipynb  sp4_half_wave_polarimetry.ipynb  sp4_lightcurve_product.ipynb  sp4_night_report.ipynb  sp4_phot_timeseries.ipynb  sp4_polar_timeseries.ipynb  sp4_polarimetry.ipynb  sp4_products.ipynb  sp4_quarter_wave_polarimetry.ipynb  sp4_sci_image_reduction.ipynb  sp4_stack_sci_images.ipynb  sp4_white_band_products.ipynb
scripts/: opd_mini_pipeline.py  robo43_pipeline.py  sparc4_mini_pipeline.py
sparc4/: db.py  params.py  pipeline_lib.py  product_plots.py  products.py  sparc4_params.yaml  utils.py  version.py
tools/: convert_opdacq_to_sparc.py  exoutils.py  explode_cube.py  move_files_to_channels_inside_nights.py  opd_convert_pipeline.py  remove_cube_dimension.py  sparc4_distribute_data.py  (+12 more)
(+10 files in other folders)
